Test that system tests see same database state as system

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Hello, rails 5.1</h1>
 
+<%= link_to "New Banana", new_banana_path %>
+
+<h2>Calculator</h2>
+
 <label>
   A
   <input id="a" type="number" />
