--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <% if flash[:notice].present? %>
+      <p>
+        <%= flash[:notice] %>
+      </p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
